# bevy_web_codecs

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: avif.avif
bevy_web_codecs/: Cargo.toml  README.md
bevy_web_codecs/src/: image.rs  lib.rs
bevy_web_codecs_gltf/: Cargo.toml  README.md  rustfmt.toml
bevy_web_codecs_gltf/examples/: gltf.rs
bevy_web_codecs_gltf/src/loader/: mod.rs
examples/: images.rs
src/: image.js  image.rs  lib.rs
