[package]
name = "bevy_web_codecs_gltf"
version = "0.16.1"
edition = "2024"
description = "A fork of bevy_gltf which decodes images using bevy_web_codecs"
repository = "https://github.com/jf908/bevy_web_codecs"
keywords = ["gamedev", "wasm", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
dds = ["bevy_render/dds", "bevy_image/dds", "bevy_core_pipeline/dds"]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_multi_layer_material_textures = [
  "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]
pbr_specular_textures = ["bevy_pbr/pbr_specular_textures"]

[dependencies]
# bevy
bevy_animation = { version = "0.16.1", optional = true }
bevy_app = { version = "0.16.1" }
bevy_asset = { version = "0.16.1" }
bevy_color = { version = "0.16.2" }
bevy_core_pipeline = { version = "0.16.1" }
bevy_ecs = { version = "0.16.1" }
bevy_image = { version = "0.16.1" }
bevy_math = { version = "0.16.1" }
bevy_mesh = { version = "0.16.1" }
bevy_pbr = { version = "0.16.1" }
bevy_reflect = { version = "0.16.1" }
bevy_render = { version = "0.16.1" }
bevy_scene = { version = "0.16.1", features = ["bevy_render"] }
bevy_transform = { version = "0.16.1" }
bevy_tasks = { version = "0.16.1" }
bevy_utils = { version = "0.16.1" }
bevy_platform = { version = "0.16.1", default-features = false, features = [
  "std",
  "serialize",
] }

bevy_web_codecs = { path = "../bevy_web_codecs" }

# other
gltf = { version = "1.4.0", default-features = false, features = [
  "KHR_lights_punctual",
  "KHR_materials_transmission",
  "KHR_materials_ior",
  "KHR_materials_volume",
  "KHR_materials_unlit",
  "KHR_materials_emissive_strength",
  "KHR_texture_transform",
  "extras",
  "extensions",
  "names",
  "utils",
] }
thiserror = { version = "2", default-features = false }
base64 = "0.22.0"
fixedbitset = "0.5"
itertools = "0.14"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
smallvec = "1.11"
tracing = { version = "0.1", default-features = false, features = ["std"] }


[dev-dependencies]
bevy_log = "0.16"
bevy = { version = "0.16", default-features = false, features = [
  "std",
  "async_executor",
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  # "bevy_gltf",
  "bevy_input_focus",
  "bevy_log",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  # "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",
] }


[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"


[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
